--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 /node_modules
+node_modules/**/.cache
 /.pnp
 .pnp.js
 
@@ -18,6 +19,6 @@
 .env.test.local
 .env.production.local
 
-npm-debug.log*
+ebug.log*
 yarn-debug.log*
-yarn-error.log*
+yarn-error.log*npm-d
